--- a/train.ipynb
+++ b/train.ipynb
@@ -720,7 +720,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(TF)",
+   "display_name": "TF",
    "language": "python",
    "name": "tf"
   },
@@ -734,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
